--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,6 @@
-fastapi
-uvicorn
-pydantic
-pydantic-settings
+python-jose[cryptography]
+passlib[bcrypt]
+python-multipart
 python-dotenv
 openai
 transformers
@@ -11,4 +10,8 @@ pillow
 chromadb
 pytest
 httpx
-google-generativeai
+google-genai
+fastapi
+uvicorn
+pydantic
+pydantic-settings
